--- a/docs/White paper/001.md
+++ b/docs/White paper/001.md
@@ -1,3 +1,184 @@
+Decentralized EcoSystems
+White paper
+
+2022
+
+    1. Введение:
+
+Приветствуем Вас на страницах данного документа.
+
+Здесь мы собираем крипто энтузиастов, экспертов и обычных пользователей, для того чтобы объединиться при создании чего-то нового и глобального в интернете Блокчейнов. Открыть двери в мир web3.0 для каждого человека, чтобы упростить задачу знакомства и понимания этого глобального изменения интернета для всех. Помочь им не совершить ошибки впуская новый интернет в свою жизнь.
+
+Какую ошибку допускает сейчас практически каждый новичок, начиная свой путь в технологии crypto?
+Эта ошибка является главным врагом самой технологии. Это KYC-авторизация! Как купить или получить свои первые токены и где их хранить? На подтвердивших свою централизованную надёжность биржах, в виде Дропов, Лаунчпадов или просто купить интересующие валюты? Возможно.. Но, начиная свой путь таким образом, вы оставляете нестираемый след..
+
+В интернете Блокчейнов, не нужны имена, фамилии, адреса и номера документов. Здесь, единственным подтверждением вашей личности должен оставаться ваш публичный ключ, ваш адрес в Блокчейн.
+Мы не выступаем категорически против KYC и централизованных сервисов, но каждый человек должен делать этот выбор осознанно и не в самом начале пути.
+
+Для знакомства с миром блокчейн и криптовалюты, мы предлагаем объединить продукт, которым пользуются более 700 млн пользователей (Telegram messenger) и блокчейн технологию. Внедрить в базовый код мессенджера возможность создавать децентрализованные чаты без привязки к основному аккаунту, возможность создавать стейблкоины любых фиатных валют мира, обменивать и отправлять их и многие другие криптовалюты в пару кликов. Создавать собственные NFT для подтверждения авторского права на изобретения и/или творческий контент (аудио, видео, фото файлы) и хранить файлы в децентрализованном облачном хранилище. Создавать собственные dApps на базе нашего блокчейн и получать вознаграждения за счёт комиссий от использования их пользователями. Каждый человек может присоединиться к нашему DAO и полноправно участвовать в создании чего-то нового в интернете Блокчейнов.
+
+Для создания нашего с вами проекта, мы - первая небольшая группа энтузиастов, решили изучить и взять всё самое лучшее из уже существующих предложений на рынке.
+Объединить самые сильные идеи и решения в один максимально масштабируемый, децентрализованный и безопасный Блокчейн.
+
+Наблюдая за ходом развития блокчейн индустрии, можно заметить, что в самом начале, основной упор делался на децентрализацию и безопасность, которую при должном развитии сети, отлично обеспечивали блокчейны PoW.
+Со временем, развитие экосистем децентрализованных продуктов требовало повышения масштабируемости сетей. Индустрия начала двигаться в этом направлении за счёт замены плохо масштабируемого консенсуса PoW, на гораздо более приспособленный для этого консенсус PoS и его производные. Однако, в консенсусах PoS заметно страдает такой показатель как децентрализация.
+Таким образом, различные этапы развития индустрии выделяют рызные приоритеты.
+Мы в команде проекта DES убеждены, что неминуемо надвигающийся этап WEB3.0, как в воздухе нуждается в блокчейнах, в равной степени решающих все три проблемы трилеммы масштабирования блокчейн, а именно: 1. Безопасность работы сети и приложений (основная черта и преимущество WEB3.0 над WEB2.0); 2. Высокая децентрализация (приложения по своей сути должны использовать максимально децентрализованные решения); 3. Масштабируемость сети, позволяющая достигнуть пропускной способности на уровне централизованных решений (для удобства пользования и плавности интерфейсов, они должны опираться на скорости работы сети, сопоставимые со скоростями работы централизованных серверов). Большинство блокчейнов 3 уровня декларируют до 10 тыс. транзакций в секунду. Для конкурирования, например с Visa, желательно достигать показателя ближе к 65 тыс. транзакций в секунду.
+Таким образом, чтобы проникновение WEB3.0 не захлебнулось на самом старте своего шествия в современный мир, увеличение скорости функционирования блокчейнов многократно, становится просто обязательным на данном этапе развития блокчейн индустрии.
+Проект DES создаётся для того, чтобы за счёт решения трилеммы масштабирования блокчейна, путём сохранения безопасности имеющейся сети (в проекте будет использован форк сети Cosmos), а также, повышением децентрализации за счёт доработки и изменения консенсуса DPoS и правил распределения голосов Актива ДАО при принятии решений по развитию проекта (не более 8% на одного активиста проекта), начисляемых не за финансовый вклад, а за активную позицию в вопросах развития децентрализованной сути проекта, а также, масштабирования сети за счёт внедрения шардинга.
+Мы стремимся создать проект, позволяющий новичкам легко и быстро знакомиться с миром web3, профессионалам создавать качественные приложения и зарабатывать на них (до 30% от комиссий по их приложениям), а энтузиастам – используя свои знания и опыт, абсолютно без вложений присоединиться к проекту и стать частью его актива, вплоть до попадания в управляющий совет ДАО.
+Таким образом, планируется создание быстрого (вплоть до конкурентоспособных скоростей с текущими централизованными платёжными системами), безопасного, децентрализованного блокчейн на экологичном консенсусе DDPoS (Decentralized-DPoS) с низкими комиссиями, что сделает его максимально подходящим для развития Web3.0 и dApps.
+В дополнение к этому, проект DES создаёт собственную экосистему децентрализованных продуктов:
+
+- Экосистема централизованного мессенджера (на основе открытого исходного кода Telegram (с улучшениями и дополнениями, со всеми его имеющимися плюсами, включая пользовательскую базу данных) с децентрализованным разделом для максимально безопасного обмена сообщениями и создания экосистемы децентрализованных дополнений к нему;
+- Экосистема децентрализованных стейблкоинов с комбинированным механизмом алгоритмического обеспечения;
+- Экосистема децентрализованной биржи с возможностью спотовой и фьючерсной торговли;
+- Экосистема децентрализованных операционных систем;
+  Также, в проекте будет функционировать собственная утилитарная монета DES с дефляционной токеномикой, которая будет применяться для:
+- алгоритмического регулирования обеспечения экосистемы стейблкоинов проекта (в свою очередь, используемых для привлечения инвестиций в продукты проекта);
+- в комиссиях за транзакции в блокчейне;
+- для вознаграждения валидаторов проекта;
+- для автоматизированных выплат инвесторам, создателям приложений и активистам проекта;
+- алгоритмического наполнения страховых и обеспечительных фондов проекта;
+- выплат по аирдропам и баунти программам.
+
+      2. Описание рынка:
+
+  2.1 Блокчейн экосистемы:
+  В настоящее время зафиксирован рост хакерских атак на блокчейн проекты. Динамика этой угрозы растёт из года в год (за последние 5 лет средний рост потерь от хакерской активности блокчейн проектов составил 1,62 раза в год, а общие потери за те же 5 лет выросли в 15,3 раза1.1), даёт понять, что достигать повышения масштабируемости блокчейн за счёт снижения безопасности - не допустимо! В свою очередь, менее децентрализованные проекты себя сильно дискредитировали высокой централизацией и преследованием интересов в первую очередь так называемых элит проекта, а не блокчейн сообществ и либертарианских идеалов. В глазах сообщества такие проекты получают всё меньше поддержки. Инвесторы также не горят желанием поддерживать блокчейн проекты, в которых сила решающих голосов сосредоточена в руках централизованных структур (будь то доминирующие майнинговые пулы сетей PoW, крупные валидаторы PoS/DPoS и пр. сетей или сосредоточение большого % токенов проекта, полученных создателями или инвесторами проекта на ранних этапах развития проекта по очень низким ценам).
+  На данный момент на рынке много игроков, обеспечивающих решение 2 из 3 проблем трилеммы масштабируемости блокчейн и разбить их можно по типам консенсуса: 1) Проекты с консенсусом PoW:
+  Плюсы: Высокая (условно) децентрализация и безопасность сети.
+  Однако высокая децентрализация может быть нарушена сосредоточением большой доли хэшрейта сети в руках крупных майнинговых пулов. Так, например, по состоянию на июнь 2022 года 69,9%2 всего хэшрейта сети Bitcoin сосредоточено в руках 5 крупнейших пулов.
+  Минусы: Низкая масштабируемость. При повышении объёма обращений к сети, растут комиссии. И этот минус без работы над его нивелированием не позволит PoW сетям стать масштабным участником сетей WEB3.0, поскольку для их функционирования будут нужны миллиарды и триллионы транзакций и желательно с комиссиями, стремящимися к нулю. Т.е., количество транзакций – сопоставимое с пропускной способностью централизованных серверов. 2) Проекты с консенсусом PoS/DPoS и прочие без доказательства работы:
+  Плюсы: Высокая масштабируемость и достаточно высокая безопасность сети. Дополнительным плюсом является высокая экологичность данных сетей по сравнению с сетями, работающими на консенсусе PoW, поскольку майнерам не приходится участвовать в «гонке вооружений». Валидаторами они становятся, доказывая свою долю участия в проекте, а не обеспечивая наибольшую вычислительную мощность со всеми вытекающими.
+  Минусы: к минусам данных проектов относится (обычно) высокая централизация, поскольку чаше всего максимальная сила голоса сосредоточена в руках крупнейших валидаторов с крупными стейками и централизованной структурой управления. Интересы децентрализации стоят у них далеко не на первом месте.
+  В то же время, проблемы централизации криптовалютных проектов подвергают их критике, оттоку инвестиций и негативным информационным полем на всю индустрию криптовалют.
+  На данный момент, проектов полностью решивших трилемму масштабируемости блокчейна на рынке нет.
+
+          2.2 Децентрализованные мессенджеры:
+
+  В имеющихся реалиях развития децентрализованных решений, постепенно появляется всё больше приложений WEB3.0. В том числе и мессенджеры.
+  При анализе имеющихся на рынке решений, становится понятно, что у всех современных мессенджеров, основанных на технологии блокчейн, имеется проблема скорости и плавности работы, а также, отсутствия привычных для пользователей централизованных мессенджеров функций и пользовательского опыта.
+  Озвученные выше проблемы, современных децентрализованных мессенджеров приводят к тому, что им не хватает пользовательской аудитории. Клиенты, впервые скачав блокчейн-мессенджеры, не увидев в них привычного функционала и не получив привычного пользовательского опыта, тут же разочаровываются и принимают решение удалить или просто не пользоваться таким не удобным приложением.
+  На данный момент выбор децентрализованных мессенджеров достаточно скуден. И у всех них есть существенные недостатки. Например, плата за сообщения, недостаточно дружелюбный интерфейс, медленная скорость работы.
+  Также, все их объединяет отсутствие сколь-нибудь серьёзной пользовательской базы. На данный момент, самые популярные такие клиенты с трудом перешагивают рубеж в 100 тысяч скачиваний в магазинах приложений. Это как раз и является следствием того, что, базируясь на блокчейн с существующими проблемами, тяжело создать dApps, способные достойно конкурировать с централизованными аналогами, такими, как например Telegram с мгновенной скоростью работы, наличием ботов, big data и очень дружелюбным и плавным интерфейсом, что привело к нему уже более 700 млн. пользователей. И в первую очередь - проблема в скорости работы децентрализованных решений по сравнению с централизованными.
+  В существующих сетях блокчейн, с их скоростью в максимум 10 тыс. TPS и солидными комиссиями, мессенджеры при должной популярности работают либо недостаточно быстро, либо требуют оплаты комиссий.
+  Решение же данной проблемы подтолкнуло в массы мессенджер, который мог бы быть одновременно и удобным на уровне централизованных решений и предоставлял бы людям абсолютно безопасно вести личное, конфиденциальное или интимное общение.
+  Для основы в качестве привычного централизованного мессенджера был выбран Telegram, как один из самых безопасных, популярных и быстрорастущих по аудитории централизованных мессенджеров в мире 4.
+  Интерфейс данного мессенджера достаточно дружелюбен, интуитивно понятен и обладает приятной плавностью и быстродействием.
+  Функционал очень обширен и позволяет создавать ботов, которые решают массу задач как обычных, так и бизнес-пользователей.
+  В мессенджере есть функционал, позволяющий запускать и (управлять ей) таргетированную рекламу бизнесов.
+
+          2.3 Децентрализованные стейблкоины:
+
+  На современном рынке главенствуют 3 типа стейблкоинов: 1. Централизованные (USDT, USDC, BUSD). Обеспечиваются фиатными деньгами и эквивалентом в акциях, облигациях и т.д.
+  Плюсы:
+
+- первые из стейблкоинов на рынке;
+- большая капитализация;
+- узнаваемость и часто - присутствие на большом количестве бирж;
+  Минусы:
+- централизация;
+- возможность на уровне смарт-контракта заблокировать токены;
+- большие сомнения в достаточной обеспеченности полной эмиссии;
+
+2. Стейблкоины, обеспечиваемые криптовалютой (DAI. Другие популярные стейблкоины такого типа на рынке сложно найти).
+   Плюсы:
+
+- высокая децентрализация и безопасность (в случае с DAI. Хотя, имеющая зависимость от централизованного USDC, обеспечивающего около 32%1.2 стоимости всей эмиссии DAI. Стоит отметить, что в Circle (Эмитент USDC) допустил возможность блокировки обеспечения, находящегося в смарт-контракте DAI;
+- в случае с DAI – повышенная залоговая обеспеченность, что негативно сказывается на рентабельности применения и меньшей ликвидности проекта для самого эмитента;
+  Минусы:
+- участвуя в эмиссии DAI, пользователи должны вносить избыточное обеспечение, для получения нужного количества токенов. Так, например, для того, чтобы эмитировать DAI в эквиваленте $100, необходимо внести залоговое обеспечение, например в монете Eth в объёме не менее $150, чтобы позиции не были ликвидированы;
+- высокие комиссии сети Ethereum
+
+3. Алгоритмические стейблкоины (USDD, USDN, UST (два последних на данный момент, радикально потеряли привязку к $)).
+   Плюсы:
+
+- высокая ликвидность обеспечивающей монеты и её рост с ростом капитализации обеспечиваемого стейблкоина
+  Минусы:
+- Возможность утери привязки к целевой фиатной валюте при резких колебаниях рынка криптовалют и недостаточности проработке алгоритмов обеспечения;
+  В данный момент рынок не испытывает недостатка в представителях экосистемы стейблкоинов. Их действительно много. Все даже не упомнить.
+  Однако, как говорилось выше, почти у всех из них есть какие-либо недостатки или даже критические уязвимости, которыми рано или поздно пользуются мошенники или конкуренты.
+
+          2.4 Децентрализованные биржи (DEX)
+
+  Плюсы1.3:
+
+- анонимность
+- более низкие комиссии по сравнению с централизованными (CEX) биржами;
+- отсутствие посредников, в роли которых выступают централизованные биржи (CEX): Binance, BitForex, Exmo и другие. Это повышает уровень безопасности, возвращая контроль над активами участвующим сторонам. Сделки между трейдерами на DEX биржах осуществляются при помощи верификации через мульти-подписи.
+  Минусы:
+- отсутствие многих опций для трейдеров, таких как маржинальная торговля или выбор режима заявок у абсолютного большинства представителей данного типа бирж.
+- многие DEX работают на смарт-контрактах, поэтому на них могут торговаться только токены с поддержкой смарт-контрактов соответствующих сетей.
+  Таким образом, на данный момент DEX биржи решают проблему децентрализации и низких комиссий, однако, по своему удобству, быстродействию и функционалу очень сильно проигрывают своим централизованным конкурентам, не будучи способными решить львиную долю задач, которые решают централизованные биржи и которые уже давно и очень прочно вошли в жизнь крипто инвесторов и энтузиастов
+  2.5 Децентрализованная оболочка и Операционная система
+
+      3. Описание продукта и предлагаемый способ решения.
+
+Проект Decentralized EcoSistems создаётся с целью решения трилеммы масштабирования блокчейн, а значит – создания сети блокчейн, которая будет, не подвергая сомнению безопасность и децентрализацию, обеспечивать масштабируемость и скорость работы сети, сопоставимую с централизованными серверами, необходимую для возможности функционирования сетей Web3 и dApps удобство пользования ими на сопоставимом уровне с централизованными сетями и приложениями.
+Для решения такой задачи, в качестве основы используется форк сети проекта Cosmos Network (консенсус DPoS).
+Учитывая, что в части безопасности работы сети Cosmos выявлено проблем не было, были изучены возможности повышения децентрализации и масштабируемости данной сети.
+Для повышения безопасности данной сети консенсус принятия решений будет изменён на DecentralizeDPoS (DDPoS).
+Особенности консенсуса DecentralizeDPoS:
+
+- Добавляется дополнительный алгоритм Proof-of-Time (по времени нахождения в сети валидаторов). Таким образом валидаторы стимулируются быть максимально технически соответствующими требованиям сети;
+- модернизируется модуль управления сетью: высшим управляющим органом сети является ДАО (децентрализованная автономная организация), в которой наибольший вес голоса имеют не держатели крупнейшего пула, а самые активные участники децентрализованной сети, с ограничением максимальной доли в 8%, что стимулирует участников сети активнее участвовать в функционировании и развитии сети в сторону децентрализации и социализации;
+  Для повышения масштабируемости проектируемой сети, в исходном коде блокчейна сети Cosmos будет реализован механизм шардинга3.
+  Шардинг будет реализован следующим образом:
+- вводится понятие генерального валидатора. Такой статус получает нода, выступающая валидатором при согласовании блока со своей группой (шардом);
+- на основе алгоритма Proof of Time, вводится рейтинг отказоустойчивости нод. Чем дольше время аптайма и отсутствия штрафов (за невыполненную работу или отсутсвие в сети), тем выше рейтинг ноды;
+- самые безотказные ноды получают право становиться генеральными валидаторами шардов;
+- все валидаторы сети каждые (1-15) секунд случайным образом предварительно объединяются в группы по 5-15 нод и к моменту проведения валидации блока формируются (в шарды), и находятся в протестированном на безотказность состоянии и готовы быстро и безопасно проверить и согласовать (либо отклонить) предложенный блок;
+  Таким образом, за счёт озвученных технических решений, блокчейн DES будет максимально близок к решению трилеммы масштабирования блокчейна поскольку будет способен проводить количество транзакций, максимально приближённое к самым быстрым централизованным системам без ущерба децентрализации и безопасности сети.
+  Учитывая, данные технические решения по масштабированию принято решение сделать комиссии минимальными (комиссия за совершение транзакций будет составлять от 0,1% до 0,02% от суммы транзакции. Детальное описание — в разделе эмиссии токенов DES). Благодаря этим факторам создавать на базе блокчейна DES высокопроизводительные приложения WEB3 будет легко и выгодно.
+  Для поддержки начинающих разработчиков приложений, на начальном этапе проекта комиссия за транзакцию будет повышенной до 0,1% и будет снижаться при увеличении количества транзакций до проектного объёма комиссии в 0,02%.
+  Также, данная комиссия за транзакции будет связана с общим количеством транзакций в экосистеме DES. С ростом количества транзакций и капитализации стоимость транзакций будет снижаться/
+  Разница между стартовой комиссией (0,1%) и проектной (0,02%) будет распределяться следующим образом: 1) Вознаграждение создателей приложений (30%) 2) Вознаграждение валидаторов (20%) 3) Операционные расходы (25%) 4) Наполнение пула ликвидности основной монеты проекта (DES) (10%) 5) Фонд развития проекта (10%) 6) Пополнение пула вознаграждения активистов. (5%)
+  Также, в рамках проекта разработаны и будут запущены собственные экосистемы децентрализованных продуктов: 1. Экосистема централизованного мессенджера с децентрализованным блоком обмена сообщениями со следующими дополнениями:
+  1.1 Децентрализованный криптовалютный кошелёк с возможностью добавления новых сетей и токенов (по адресам контрактов и прочих необходимых данных) с возможностью перевода криптовалют прямо внутри децентрализованных чатов
+  1.2 DPN (децентрализованных VPN)
+  1.3 Децентрализованное хранилище
+  1.4 Децентрализованный браузер с возможностью верификации по криптовалютному кошельку
+  1.5 Видеохостинг (гибридный: централизованный + децентрализованный)
+  1.6 Фотохостинг (гибридный: централизованный + децентрализованный)
+  1.7 Аудиохостинг (гибридный: централизованный + децентрализованный)
+  1.8 NFT-зация -аудио -фото -видео и PDF-контента
+  1.9 Синхронные аудиопереводы
+  1.10 Децентрализованные аудио и видео звонки
+  1.11 «Портфельный аналитик» (модуль, позволяющий следить за тенденциями активов портфеля в одном месте, включая графики (миниатюру на основной странице и полный на развороте) и стоимость с момента покупки в портфель и за периоды)
+  1.12 Кнопка быстрого перевода крипты в стейблы. Полезна при резком падении рынка альтов. Для автоматизации процесса сразу по всему портфелю.
+  1.13 «Аналитик стартапов» (собирает информацию о проектах на основе открытой информации в интернете по алгоритмам проверки стартапов и присваивает на оснвое этой проверки рейтинг стартапу). Также, собирает и анализирует базу имён (для анализа бэкграунда создателей) в криптоиндустрии
+  Для реализации мессенджера будет взят исходный код мессенджера Telegraph (в части централизованного раздела мессенджера)
+  В основу же децентрализованного раздела гибридного мессенджера DES лягут варианты решений в соответствии с дорожной картой проекта:
+
+1. Telegram Бот, осуществляющий перенаправление данных из децентрализованных чатов в Decentralized Storage (децентрализованные хранилища), через децентрализованные узлы передачи данных (DPN).
+2. Децентрализованный мессенджер с открытым исходным кодом Adamant c обменом данными на основе DPN и Decentralized Storage DES.
+   Впоследствии, данный мессенджер будет дополнен следующими модулями:
+   Функционировать два раздела мессенджера будут абсолютно независимо друг от друга. 2. Экосистема децентрализованных стейбл-коинов на основе комбинированного консенсуса (75% залоговое обеспечение (аналогично с DAI) + 25% алгоритмическое обеспечение собственной монетой DES), со следующими характерными преимуществами:
+   2.1 75% залогового обеспечения формируется из не менее 15 самых децентрализованных криптовалют мира с большим комьюнити и разнонаправленной волатильностью (детальное описание — в разделе децентрализованных стейбокоинов проекта);
+   2.2 25% обеспечения реализуется алгоритмически, собственной монетой проекта DES;
+   2.3 За обеспечение в эквиваленте $100 можно будет получить 70-75 стейблкоинов deUSD
+   2.4 В дальнейшем будет создана возможность пользователям самостоятельно в кошельке создавать собственные стейблкоины, ранее не созданной фиатной валюты или же прочих товаров, работающие в соотвествии с общими принципами эмиссии и обеспечения, заложенными в алгоритм экосистемы
+   Описание:
+   Одним из продуктов нашего блокчейн проекта являются стейблкоины различных валют мира. При желании, каждый пользователь сможет создать свою стабильную валюту в необходимом ему колличестве. (Уже наверное не актуально на этом этапе WP)
+
+Обеспечение наших стабильных валют будет дробным. 125%-150% (в зависимости от коэффициента волатильности каждой конкретной обеспечительной криптовалюты) стоимости должно подтверждаться заблокированными пользователем средствами, в виде одной из криптовалют находящихся в списке доступных к блокированию.
+В списке находится около 16 топ DeFi криптовалют по рыночной капитализации, не имеющих претензий по вопросам децентрализации на основе данных CoinMarketCap, CoinGekco и TradingWiev.
+Ещё 25% стоимости дополнительного обеспечения будет блокироваться в монетах DES из специального пула смарт-контрактом. Итого: каждая стабильная монета будет обеспечена залоговыми средствами не менее чем на 150%, в зависимости от уровня волатильности каждой конкретной обеспечительной криповалюты.
+Надо понимать, что порог 150% это минимальный порог залога. И при падении стоимости актива ниже этого порога произойдёт ликвидация залога. Поэтому, если пользователь планирует вернуть залоговые средства после целевого использования стабильных монет, ему потребуется перестраховаться и внести залоговое обеспечение с избытком, дабы избежать ликвидации своего залога.
+Та часть обеспечения, которая реализована на основе залока избыточного количества криптовалют, будет работать по аналогии с обеспечительным механизмом в проекте DAI от MakerDAO со следующими отличиями:
+
+1.  ..
+2.  ..
+3.  ..
+    Часть обеспечения, которая реализована за стчёт токенов DES будет наполняться из заранее сформированного обеспечительного фонда (в виде смарт-контракта) в размере 200 млн. DES, который будет пополняться на сумму 10% от стоимости комиссий за все действия со стейблкоинами проекта DES.
+    При падении объёма залогового криптовалютного обеспечения, со 125% до 120% регурирование обеспечения происходит пополением объёма токенов DES, перемещаемых из обеспечительного пула стейблкоинов проекта в залоговый контракт. При продолжении падения стоимости залогового обеспечения, включаются механизмы регулирования стоимости на основе арбитража и ликвидации залогового обеспечения (по аналогии с проектом DAI).
+
+        3. Децентрализованная биржа с возможностью спотовой и фьючерсной торговли (что станет возможным благодаря низкой комиссии и высокой скорости транзакций);
+        4. Децентрализованная операционная система для всех возможных носителей (смартфоны, планшеты, ПК, Смарт ТВ)
+
+
+
         4. Описание токенов.
 
     Токен проекта DES, тикер DES является утилитарной (с функциями гаверненс) монетой проекта, которая применяется для:
