Update Описание заработка с комиссий валидаторов и делегаторов.md

--- a/Описание заработка с комиссий валидаторов и делегаторов.md
+++ b/Описание заработка с комиссий валидаторов и делегаторов.md
@@ -1,5 +1,4 @@
-Valeriy Akimov, [09.10.2022 11:27]
-Описание технической информации по консенсусу блокчейн:
+#Описание технической информации по консенсусу блокчейн:
 
 В основной части консенсус будет работать на движке thendermint bft. 
 Но в него должны быть внесены изменения. Будет не стандартный, но модернизированный dpos консенсус. 
@@ -9,7 +8,7 @@ Valeriy Akimov, [09.10.2022 11:27]
 Также в этой ситстеме, в отличие от стандартного dpos, будет исключена борьба за низкие комиссии. Таким образом всем валидаторам будут уплачиваться одинаковые комиссионные. 
 Система заработка делигаторов тоже будет модернизированная.
 
-Valeriy Akimov, [09.10.2022 11:27]
+
 Все полученные за подписание блоков в течение периода в 10 000 блоков комиссии с транзакций будут так-же помещаться в отдельный Пул (П2), который будет разделён 50/50 - валидаторы/делегаторы.
  Заработок Валидаторов будет распределён им непосредственно за колличество подписанных блоков таким образом: за 100% будет взято 10 000 блоков и распределенно в процентном соотношении валидаторам 0,01% за каждый подписанный блок. 
  Делигаторы разделят свои 50% (П2) исходя из вложенных(заделигированных) ими в (П1) средств. Взяв общий объём пула  (П1)за 100% мы сможем выяснить долю каждого делигатора в процетном соотношении. Исходя из выясненной доли, каждый делигатор будет получать соответвующее его доле вознаграждение из 50% (П2). 
