--- a/docs/Решения ДАО/11-fev-23.md
+++ b/docs/Решения ДАО/11-fev-23.md
@@ -28,7 +28,7 @@
 1.2 Вознаграждение за валидацию блоков
 2. Делегатор имеет 1 заработок: в соответствии с долей от 50% с заработанных на валидировании за 10 000 блоков
 3. Активисты сообщества вознаграждаются следующим образом:
-3.1 ДАО проекта размещает задание в соответсвующем разделе форума
-3.2 ДАО обозначает требования к исполнителям, сроки и максимальную стоимость выполнения задания на данный момент. Если есть желающие, они делают ставки, за сколько они готовы выполнить задание. Если предложений нет, ДАО может принять решение по повышению стоимости выполнения задания на 10% каждые 3 дня, но не выше такой-то стоимости
-3.3 Если несколько участников согласилось выполнить задание за одну и ту же стоимость, в результате, выбирается решение с более оптимизированным кодом
-3.4 По результатам внедрения решения, исполнитель получает вознаграждение в стейблкоинах проекта.
+ 3.1 ДАО проекта размещает задание в соответсвующем разделе форума.
+ 3.2 ДАО обозначает требования к исполнителям, сроки и максимальную стоимость выполнения задания на данный момент. Если есть желающие, они делают ставки, за сколько они готовы выполнить задание. Если предложений нет, ДАО может принять решение по повышению стоимости выполнения задания на 10% каждые 3 дня, но не выше такой-то стоимости.
+ 3.3 Если несколько участников согласилось выполнить задание за одну и ту же стоимость, в результате, выбирается решение с более оптимизированным кодом.
+ 3.4 По результатам внедрения решения, исполнитель получает вознаграждение в стейблкоинах проекта.
