--- a/docs/посты/1.md
+++ b/docs/посты/1.md
@@ -4,7 +4,7 @@
 
 Уже на протяжении десяти месяцев мы трудимся над созданием продукта, который принесёт много пользы всем интернет пользователям.
 Всё это время мы описывали свои идеи, анализировали современный рынок и тщательно прорабатывали каждый раздел продукта.
-И сейчас настал переломный момент, когда мы перешли от мыслей и анализов к действиям...
+И сейчас настал эпохальный момент, когда мы перешли от мыслей и анализов к действиям...
 
 🥳 5 февраля 2023 года мы запустили свою ветку блокчейн на COSMOS SDK 🔥
 Для кого то это может показаться пустяком и что в этом нет ничего особенного... и со своей колокольни, может вы и правы.
