--- a/docs/посты/1.md
+++ b/docs/посты/1.md
@@ -4,11 +4,11 @@
 
 Уже на протяжении десяти месяцев мы трудимся над созданием продукта, который принесёт много пользы всем интернет пользователям.
 Всё это время мы описывали свои идеи, анализировали современный рынок и тщательно прорабатывали каждый раздел продукта.
-И сейчас настал эпохальный момент, когда мы перешли от мыслей и анализов к действиям...
+И сейчас настал момент, когда мы перешли от мыслей и анализов к действиям...
 
-🥳 5 февраля 2023 года мы запустили свою ветку блокчейн на COSMOS SDK 🔥
+🥳 5 февраля 2023 года мы запустили свой блокчейн на открытом коде COSMOS SDK 🔥
 Для кого то это может показаться пустяком и что в этом нет ничего особенного... и со своей колокольни, может вы и правы.
-Но для нас это принципиально важный шаг в достижении своих целей!
+Но для нас это момент эпохален!
 
 Теперь, когда у нас есть понимание чего конкретно мы хотим и что для этого нужно сделать, нам осталось идти только вперёд. 
 Нас ждут сотни часов кропотливой работы, но это труд во благо, поэтому от этих бессонных ночей мы будем получать только удовольствие 👌
