--- a/docs/посты/1.md
+++ b/docs/посты/1.md
@@ -7,8 +7,7 @@
 И сейчас настал момент, когда мы перешли от мыслей и анализов к действиям...
 
 🥳 5 февраля 2023 года мы запустили свой блокчейн на открытом коде COSMOS SDK 🔥
-Для кого то это может показаться пустяком и что в этом нет ничего особенного... и со своей колокольни, может вы и правы.
-Но для нас это момент эпохален!
+Для нас это момент эпохален!
 
 Теперь, когда у нас есть понимание чего конкретно мы хотим и что для этого нужно сделать, нам осталось идти только вперёд. 
 Нас ждут сотни часов кропотливой работы, но это труд во благо, поэтому от этих бессонных ночей мы будем получать только удовольствие 👌
