--- a/docs/посты/1.md
+++ b/docs/посты/1.md
@@ -9,8 +9,9 @@
 🥳 5 февраля 2023 года мы запустили свой блокчейн на открытом коде COSMOS SDK 🔥
 Для нас это момент эпохален!
 
-Теперь, когда у нас есть понимание что конкретно нужно людям, и как технически это реализовать, нам осталось идти только вперёд. 
-Нас ждут сотни часов кропотливой работы, но это труд во благо, поэтому от этих бессонных ночей мы будем получать только удовольствие 👌
+Теперь у нас есть понимание что конкретно нужно людям, и как технически это реализовать. 
+Нам осталось идти только вперёд! 
+Нашу команду ждут сотни часов кропотливой работы, но это труд во благо, поэтому от этих бессонных ночей мы будем получать только удовольствие 👌
 
 Перед нами стоит задача, практически полностью изменить то, что есть на данный момент... 
 
