--- a/docs/посты/1.md
+++ b/docs/посты/1.md
@@ -12,7 +12,7 @@
 Теперь у нас есть понимание, что конкретно нужно людям, и как технически это реализовать... нам осталось идти только вперёд! 
 Нашу команду ждут сотни часов кропотливой работы, но это труд во благо, поэтому от этих бессонных ночей мы будем получать только удовольствие 👌
 
-Перед нами стоит задача, практически полностью изменить то, что есть на данный момент... 
+Перед нами стоит задача, практически полностью изменить то, что есть на данный момент.
 
 Изменениям подвергнется консенсус - мы работаем над созданием уникального DeDPoS. Он будет включать в себя как привычные условия эко системы Cosmos, так и ряд дополнений, которые направлены на повышение децентрализации сети. 
 Пул валидаторов, система Пруф оф Тайм... это лишь то не многое, что будет реализовано нашей командой 💪
