--- a/docs/посты/1.md
+++ b/docs/посты/1.md
@@ -25,7 +25,7 @@
 
 На данный момент мы по крупицам разбираем код и последовательно вносим все необходимые изменения. Это занимает много времени, так как на данный момент в нашей команде мало людей, которые работают в данном направлении.
 
-Если у вас есть желание стать частью команды, то мы будем рады сотрудничать с каждым, кто проявит себя как активный участник сообщества DES 🤝
+Если у вас есть желание стать частью команды, то мы будем рады сотрудничать с каждым активным участником сообщества DES 🤝
 
 Следите за новостями на наших информационных ресурсах, задавайте вопросы, делитесь своим мнением, принимайте участие в развитии блокчейн технологий 🌐
 
