--- a/docs/посты/1.md
+++ b/docs/посты/1.md
@@ -23,7 +23,7 @@
 Ну и ещё одним важным моментом является внедрение системы шардинга 😏 
 Мы создаём многофункциональную площадку для развития всего блокчейн пространства, поэтому высокие скорости и пропускная способность сети - это основной критерий для развития  эко системы DES 🚀
 
-На данный момент мы по крупицам разбираем код и последовательно вносим все необходимые изменения. Это занимает много времени, так как на данный момент в нашей команде мало специалистов в этом направлении.
+На данный момент мы по крупицам разбираем код и последовательно вносим все необходимые изменения. Это занимает много времени, так как в нашей команде мало специалистов в этом направлении.
 
 Если у вас есть желание стать частью команды, то мы будем рады сотрудничать с каждым активным участником сообщества DES 🤝
 
