--- a/docs/посты/1.md
+++ b/docs/посты/1.md
@@ -15,7 +15,7 @@
 Перед нами стоит задача, практически полностью изменить то, что есть на данный момент.
 
 Изменениям подвергнется консенсус - мы работаем над созданием уникального DeDPoS. Он будет включать в себя как привычные условия эко системы Cosmos, так и ряд дополнений, которые направлены на повышение децентрализации сети. 
-Пул валидаторов, система Пруф оф Тайм... это лишь то не многое, что будет реализовано нашей командой 💪
+Пул валидаторов, система Proof of Time... это лишь то немногое, что будет реализовано нашей командой 💪
 
 Так же будут внесены кардинальные изменения в майнинг новых монет ☝️
 Люди будут получать новые монеты за активность и улучшение нашей эко системы... власть в проекте будет в руках активного сообщества ✊
