--- a/docs/White paper/001.md
+++ b/docs/White paper/001.md
@@ -1,41 +1,13 @@
-2 
+#Decentralized EcoSystems
+#White paper
 
 
-
-
-
-
-Decentralized EcoSystems
-White paper
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-2022
-
+##2022
 
 Содержание:
 1.	Введение:
 2.	Описание рынка:
 2.1 Блокчейн экосистемы:
-
  
 Введение:
 Приветствуем Вас на страницах данного документа. 
@@ -142,8 +114,6 @@ White paper
 Таким образом, на данный момент DEX биржи решают проблему децентрализации и низких комиссий, однако, по своему удобству, быстродействию и функционалу очень сильно проигрывают своим централизованным конкурентам, не будучи способными решить львиную долю задач, которые решают централизованные биржи и которые уже давно и очень прочно вошли в жизнь крипто инвесторов и энтузиастов
 Децентрализованная оболочка и Операционная система
 
-
-
 Описание продукта и предлагаемый способ решения.
 
 Проект Decentralized EcoSistems создаётся с целью решения трилеммы масштабирования блокчейн, а значит – создания сети блокчейн, которая будет, не подвергая сомнению безопасность и децентрализацию, обеспечивать масштабируемость и скорость работы сети, сопоставимую с централизованными серверами, необходимую для возможности функционирования сетей Web3 и dApps удобство пользования ими на сопоставимом уровне с централизованными сетями и приложениями.
@@ -210,14 +180,11 @@ White paper
 Часть обеспечения, которая реализована за стчёт токенов DES будет наполняться из заранее сформированного обеспечительного фонда (в виде смарт-контракта) в размере 200 млн. DES, который будет пополняться на сумму 10% от стоимости комиссий за все действия со стейблкоинами проекта DES.
 При падении объёма залогового криптовалютного обеспечения, со 125% до 120% регурирование обеспечения происходит пополением объёма токенов DES, перемещаемых из обеспечительного пула стейблкоинов проекта в залоговый контракт. При продолжении падения стоимости залогового обеспечения, включаются механизмы регулирования стоимости на основе арбитража и ликвидации залогового обеспечения (по аналогии с проектом DAI). 
 
-
-
 Децентрализованная биржа с возможностью спотовой и фьючерсной торговли (что станет возможным благодаря низкой комиссии и высокой скорости транзакций);
 Децентрализованная операционная система для всех возможных носителей (смартфоны, планшеты, ПК, Смарт ТВ)
 
 Описание токенов.
 Токен проекта DES, тикер DES является утилитарной (с функциями гаверненс) монетой проекта, которая применяется для:
-
 
 	алгоритмического обеспечения 25% стоимости экосистемы алгоритмических стейблкоинов проекта DES
 	сбора комиссий за транзакции в блокчейне
@@ -269,7 +236,6 @@ White paper
 3.3 Если несколько участников согласилось выполнить задание за одну и ту же стоимость, в результате, выбирается решение с более оптимизированным кодом
 3.4 По результатам внедрения решения, исполнитель получает вознаграждение в стейблкоинах проекта (более подробно с этим процессом можно ознакомиться в подразделе «Добыча монет за создание пользы в проекте», Раздела «Управление проектом».
 
-
 Пул обеспечения эмиссии стейблкоинов DES 20% от общей эмисии:
 На четвертом этапе формируется пул обеспечения эмиссии стейблкоинов DES он составляет 200 000 000 DES, что составляет 20% от общей эмиссии. Из этого пула также могут осуществляться расходы на создание и продвижение стейблкоинов DES по решению DAO, стейблкоинов.
 Оставшиеся 200 000 000 DES или 20% эмиссии распределяются следующим образом:
@@ -278,8 +244,6 @@ White paper
 - 80 000 000 DES, что составляет 8% от общей эмиссии направляется в резервный фонд компании. Монеты из данного фонда реализуются по решению участников ДАО на нужды проекта через обмен монет из данного фонда на стейблкоины проекта и в последствии, реализацию их на рынке.
 - 20 000 000 DES, что составляет 2% от общей эмиссии - выплата основателям проекта на первом этапе эмиссии сразу после запуска блокчейн по 1% в месяц от общего количества монет у 1 участника.
 - 20 000 000 DES, что составляет 2% от общей эмиссии – направляется лидерам мнений в криптоиндустрии (на основе предложений сообщества и по его решению) с целью получения поддержки проекта и его популяризации.
-
-
 
 Распределение комиссий за совершение транзакций:
 При проведении финансовых транзакций в сети DES, с каждой такой транзакции будут взиматься комиссии и распределяться внутри проекта следующим образом:
@@ -432,8 +396,6 @@ DES Арена
 ну и так же можно будет использовать часть того куска, который не знаем кому раздать😉
 
 ...Пока без конкретных цифр, так как для начала надо определиться о всех возможных вариантах, куда мы вообще хотим направлять средства... а уже потом будем искать приемлемое соотношение👌 
-
-
 
 
 6.	Рассказ о команде.
