--- a/docs/White paper/001.md
+++ b/docs/White paper/001.md
@@ -1,15 +1,15 @@
-#Decentralized EcoSystems
-#White paper
+# Decentralized EcoSystems
+# White paper
 
 
-##2022
+## 2022
 
 Содержание:
 1.	Введение:
 2.	Описание рынка:
 2.1 Блокчейн экосистемы:
  
-Введение:
+#### Введение:
 Приветствуем Вас на страницах данного документа. 
 
 Здесь мы собираем крипто энтузиастов, экспертов и обычных пользователей, для того чтобы объединиться при создании чего-то нового и глобального в интернете Блокчейнов. Открыть двери в мир web3.0 для каждого человека, чтобы упростить задачу знакомства и понимания этого глобального изменения интернета для всех. Помочь им не совершить ошибки впуская новый интернет в свою жизнь. 
@@ -49,7 +49,7 @@
 - алгоритмического наполнения страховых и обеспечительных фондов проекта;
 - выплат по аирдропам и баунти программам.
 
-Описание рынка:
+#### Описание рынка:
 Блокчейн экосистемы:
 В настоящее время зафиксирован рост хакерских атак на блокчейн проекты. Динамика этой угрозы растёт из года в год (за последние 5 лет средний рост потерь от хакерской активности блокчейн проектов составил 1,62 раза в год, а общие потери за те же 5 лет выросли в 15,3 раза1.1), даёт понять, что достигать повышения масштабируемости блокчейн за счёт снижения безопасности - не допустимо! В свою очередь, менее децентрализованные проекты себя сильно дискредитировали высокой централизацией и преследованием интересов в первую очередь так называемых элит проекта, а не блокчейн сообществ и либертарианских идеалов.  В глазах сообщества такие проекты получают всё меньше поддержки. Инвесторы также не горят желанием поддерживать блокчейн проекты, в которых сила решающих голосов сосредоточена в руках централизованных структур (будь то доминирующие майнинговые пулы сетей PoW, крупные валидаторы PoS/DPoS и пр. сетей или сосредоточение большого % токенов проекта, полученных создателями или инвесторами проекта на ранних этапах развития проекта по очень низким ценам). 
 На данный момент на рынке много игроков, обеспечивающих решение 2 из 3 проблем трилеммы масштабируемости блокчейн и разбить их можно по типам консенсуса:
@@ -64,7 +64,7 @@
 На данный момент, проектов полностью решивших трилемму масштабируемости блокчейна на рынке нет. 
 
 
-Децентрализованные мессенджеры:
+##### Децентрализованные мессенджеры:
 В имеющихся реалиях развития децентрализованных решений, постепенно появляется всё больше приложений WEB3.0. В том числе и мессенджеры. 
 При анализе имеющихся на рынке решений, становится понятно, что у всех современных мессенджеров, основанных на технологии блокчейн, имеется проблема скорости и плавности работы, а также, отсутствия привычных для пользователей централизованных мессенджеров функций и пользовательского опыта.
 Озвученные выше проблемы, современных децентрализованных мессенджеров приводят к тому, что им не хватает пользовательской аудитории. Клиенты, впервые скачав блокчейн-мессенджеры, не увидев в них привычного функционала и не получив привычного пользовательского опыта, тут же разочаровываются и принимают решение удалить или просто не пользоваться таким не удобным приложением.
@@ -77,7 +77,7 @@
 Функционал очень обширен и позволяет создавать ботов, которые решают массу задач как обычных, так и бизнес-пользователей.
 В мессенджере есть функционал, позволяющий запускать и (управлять ей) таргетированную рекламу бизнесов. 
 
-Децентрализованные стейблкоины:
+##### Децентрализованные стейблкоины:
 На современном рынке главенствуют 3 типа стейблкоинов:
 1.	Централизованные (USDT, USDC, BUSD). Обеспечиваются фиатными деньгами и эквивалентом в акциях, облигациях и т.д.
 Плюсы: 
@@ -103,7 +103,7 @@
 В данный момент рынок не испытывает недостатка в представителях экосистемы стейблкоинов. Их действительно много. Все даже не упомнить. 
 Однако, как говорилось выше, почти у всех из них есть какие-либо недостатки или даже критические уязвимости, которыми рано или поздно пользуются мошенники или конкуренты.
 
-Децентрализованные биржи (DEX)
+##### Децентрализованные биржи (DEX)
 Плюсы1.3:
 - анонимность
 - более низкие комиссии по сравнению с централизованными (CEX) биржами; 
@@ -112,10 +112,11 @@
 - отсутствие многих опций для трейдеров, таких как маржинальная торговля или выбор режима заявок у абсолютного большинства представителей данного типа бирж. 
 - многие DEX работают на смарт-контрактах, поэтому на них могут торговаться только токены с поддержкой смарт-контрактов соответствующих сетей. 
 Таким образом, на данный момент DEX биржи решают проблему децентрализации и низких комиссий, однако, по своему удобству, быстродействию и функционалу очень сильно проигрывают своим централизованным конкурентам, не будучи способными решить львиную долю задач, которые решают централизованные биржи и которые уже давно и очень прочно вошли в жизнь крипто инвесторов и энтузиастов
-Децентрализованная оболочка и Операционная система
+##### Децентрализованная оболочка и Операционная система
 
-Описание продукта и предлагаемый способ решения.
+#### Описание продукта и предлагаемый способ решения:
 
+##### Децентрализованный блокчейн третьего поколения:
 Проект Decentralized EcoSistems создаётся с целью решения трилеммы масштабирования блокчейн, а значит – создания сети блокчейн, которая будет, не подвергая сомнению безопасность и децентрализацию, обеспечивать масштабируемость и скорость работы сети, сопоставимую с централизованными серверами, необходимую для возможности функционирования сетей Web3 и dApps удобство пользования ими на сопоставимом уровне с централизованными сетями и приложениями.
 Для решения такой задачи, в качестве основы используется форк сети проекта Cosmos Network (консенсус DPoS).
 Учитывая, что в части безопасности работы сети Cosmos выявлено проблем не было, были изучены возможности повышения децентрализации и масштабируемости данной сети.
@@ -142,7 +143,7 @@
 6)	Пополнение пула вознаграждения активистов. (5%)
 Также, в рамках проекта разработаны и будут запущены собственные экосистемы децентрализованных продуктов:
 Экосистема централизованного мессенджера с децентрализованным блоком обмена сообщениями со следующими дополнениями:
-1.	Децентрализованный криптовалютный кошелёк с возможностью добавления новых сетей и токенов (по адресам контрактов и прочих необходимых данных) с возможностью перевода криптовалют прямо внутри децентрализованных чатов
+##### Децентрализованный криптовалютный кошелёк с возможностью добавления новых сетей и токенов (по адресам контрактов и прочих необходимых данных) с возможностью перевода криптовалют прямо внутри децентрализованных чатов
 2.	DPN (децентрализованных VPN)
 3.	Децентрализованное хранилище
 4.	Децентрализованный браузер с возможностью верификации по криптовалютному кошельку
@@ -161,7 +162,7 @@
 2. Децентрализованный мессенджер с открытым исходным кодом Adamant c обменом данными на основе DPN и Decentralized Storage DES.
 Впоследствии, данный мессенджер будет дополнен следующими модулями:
 Функционировать два раздела мессенджера будут абсолютно независимо друг от друга.
-Экосистема децентрализованных стейблкоинов на основе комбинированного консенсуса (75% залоговое обеспечение (аналогично с DAI) + 25% алгоритмическое обеспечение собственной монетой DES), со следующими характерными преимуществами:
+##### Экосистема децентрализованных стейблкоинов на основе комбинированного консенсуса (75% залоговое обеспечение (аналогично с DAI) + 25% алгоритмическое обеспечение собственной монетой DES), со следующими характерными преимуществами:
 1.	75% залогового обеспечения формируется из не менее 15 самых децентрализованных криптовалют мира с большим комьюнити и разнонаправленной волатильностью (детальное описание — в разделе децентрализованных стейбокоинов проекта);
 2.	25% обеспечения реализуется алгоритмически, собственной монетой проекта DES;
 3.	За обеспечение в эквиваленте $100 можно будет эмитировать 70-75 стейблкоинов deUSD
@@ -180,10 +181,10 @@
 Часть обеспечения, которая реализована за стчёт токенов DES будет наполняться из заранее сформированного обеспечительного фонда (в виде смарт-контракта) в размере 200 млн. DES, который будет пополняться на сумму 10% от стоимости комиссий за все действия со стейблкоинами проекта DES.
 При падении объёма залогового криптовалютного обеспечения, со 125% до 120% регурирование обеспечения происходит пополением объёма токенов DES, перемещаемых из обеспечительного пула стейблкоинов проекта в залоговый контракт. При продолжении падения стоимости залогового обеспечения, включаются механизмы регулирования стоимости на основе арбитража и ликвидации залогового обеспечения (по аналогии с проектом DAI). 
 
-Децентрализованная биржа с возможностью спотовой и фьючерсной торговли (что станет возможным благодаря низкой комиссии и высокой скорости транзакций);
-Децентрализованная операционная система для всех возможных носителей (смартфоны, планшеты, ПК, Смарт ТВ)
+##### Децентрализованная биржа с возможностью спотовой и фьючерсной торговли (что станет возможным благодаря низкой комиссии и высокой скорости транзакций);
+##### Децентрализованная операционная система для всех возможных носителей (смартфоны, планшеты, ПК, Смарт ТВ)
 
-Описание токенов.
+#### Описание токенов.
 Токен проекта DES, тикер DES является утилитарной (с функциями гаверненс) монетой проекта, которая применяется для:
 
 	алгоритмического обеспечения 25% стоимости экосистемы алгоритмических стейблкоинов проекта DES
@@ -224,7 +225,8 @@
 2.	За делегирование 
 3.	За выполнение заданий биржи задач проекта
 На выполнение данного этапа в пуле будет зарезервировано 500 млн. монет DES
-Способы заработка для участников и активистов проекта:
+
+#### Способы заработка для участников и активистов проекта:
 
 1. Валидатор имеет 2 заработка:
 1.1 Доля от комиссий с транзакций (более подробно описано в разделе «Консенсус сети»)
@@ -236,7 +238,7 @@
 3.3 Если несколько участников согласилось выполнить задание за одну и ту же стоимость, в результате, выбирается решение с более оптимизированным кодом
 3.4 По результатам внедрения решения, исполнитель получает вознаграждение в стейблкоинах проекта (более подробно с этим процессом можно ознакомиться в подразделе «Добыча монет за создание пользы в проекте», Раздела «Управление проектом».
 
-Пул обеспечения эмиссии стейблкоинов DES 20% от общей эмисии:
+##### Пул обеспечения эмиссии стейблкоинов DES 20% от общей эмисии:
 На четвертом этапе формируется пул обеспечения эмиссии стейблкоинов DES он составляет 200 000 000 DES, что составляет 20% от общей эмиссии. Из этого пула также могут осуществляться расходы на создание и продвижение стейблкоинов DES по решению DAO, стейблкоинов.
 Оставшиеся 200 000 000 DES или 20% эмиссии распределяются следующим образом:
 - 40 000 000 DES, что составляет 4% от общей эмиссии направляется в пул ликвидности монеты DES в паре с монетами из списка 2, который может корректироваться по решению сообщества. Реализуется закупка монет в пулы ликвидности через выпуск стейблкоинов, обеспеченных монетами DES. Данные стейблкоины обмениваются на целевые криптовалюты, которые в последствии направляются в пулы ликвидности в паре с монетой DES. Таким образом обеспечивается ликвидность монеты DES без пролива её в рынок, что могло бы приводить к дампу стоимости.
@@ -245,7 +247,7 @@
 - 20 000 000 DES, что составляет 2% от общей эмиссии - выплата основателям проекта на первом этапе эмиссии сразу после запуска блокчейн по 1% в месяц от общего количества монет у 1 участника.
 - 20 000 000 DES, что составляет 2% от общей эмиссии – направляется лидерам мнений в криптоиндустрии (на основе предложений сообщества и по его решению) с целью получения поддержки проекта и его популяризации.
 
-Распределение комиссий за совершение транзакций:
+##### Распределение комиссий за совершение транзакций:
 При проведении финансовых транзакций в сети DES, с каждой такой транзакции будут взиматься комиссии и распределяться внутри проекта следующим образом:
 - 30% вознаграждение создателям продуктов экосистемы DES от транзакций, проходящих непосредственно на их приложениях.
 - 20% вознаграждение валидаторам/делигаторам
@@ -254,13 +256,13 @@
 - 10% в Фонд Развития компании
 - 5% на пополнения пула вознаграждения активистов проекта
 
-Обеспечительный пул ликвидности DES
+##### Обеспечительный пул ликвидности DES
 Для повышения ликвидности и обеспечения стоимости монеты DES, 10% комиссий от стоимости всех транзакций в сети проекта будут направлены на пополнение созданных на стадии запуска проекта (проинвестированных полученными от инвесторов и сообщества средствами, которые в последствии будут получать комиссии с обменных транзакций в этих пулах в качестве вознаграждения) пулов ликвидности с наиболее децентрализованными монетами из списка топ-100 CoinMarketCap и CoinGecko (первоначальный список монет в приложении 3 к WP).
 При пополнении пула ликвидности монетами, полученными от транзакций, будет производиться выпуск стейблкоинов, обеспеченных токенами DES, после чего, полученные стейблкоины будут обмениваться на токены, составляющие пару с токенами DES в пулах ликвидности. Таким образом, будет обеспечиваться применение стейблкоинам и приобретение парных монет к DES без риска дампа самой монеты DES, за счёт излишнего их пролива в рынок. Также, данные действия будут стимулировать рост объёма комиссий в проекте.
 Данная схема будет приводить к изъятию части монет DES из оборота (смотри описание функционирования стейблкоинов в данном WP), а также, созданию применимости стейблкоинам проекта, что будет стимулировать рост капитализации стейблкоинов и улучшение токеномики монеты DES.
 Также, данные пулы смогут пополнять по такой же схеме, прочие участники проекта (активисты, валидаторы, делегаторы, инвесторы и прочие), для повышения собственных заработков в проекте и стимулирования роста ликвидности/стоимости токенов DES, что в свою очередь, дополнительно повышает их заработки.
 
-Инвестиционное направление в экосистеме DES:
+##### Инвестиционное направление в экосистеме DES:
 Каждый участник сети имеет возможность вложить свои монеты DES (или стейблкоины DESStable) в один из продуктов, которые находятся в разработке DAODES, или могут быть реализованы в проекте DES (на блокчейне проекта), в данном случае — только в стейблкоинах проекта.
 - При стейкинге монет в продукт/DAO, инвестор будет получать часть с комиссии транзакций (товарооборота) данного продукта.
 Инвестор имеет возможность проинвестировать как в конкретный продукт, так и во всю линейку DAO, отдавая свои средства в управление проекта, для их распределения между продуктами по необходимости, на усмотрение DAO. 
@@ -276,7 +278,7 @@
 Возможно следует перенести в раздел консенсуса (децентрализации)
 Статистику по участнику собирается с помощью SBT (с использованием смарт-контрактов). При достижении определённых результатов его кандидатура выдвигается на рассмотрение сначала всем участникам сообщества, при наборе положительных голосов, доходит до голосования участников DAO о принятии его в свои ряды (можно сразу на рассмотрение в DAO... но прикол сначала послушать мнение сообщества в том, что бы этот чувак, который претендует в будущем быть одним из тех, кто во главе всего этого, типа народ сам создаёт тот самый управляющий орган👌)
 
-Вознаграждение создателей приложений:
+##### Вознаграждение создателей приложений:
 В проекте DES реализована система вознаграждения создателей и инвесторов приложений, функционирующих на базе блокчейн DES. 
 Реализовано оно следующим образом:
 Создатель приложения регистрирует его в системе, путём создания анкеты приложения с описанием, целей, задач, предварительной оценки необходимых объёмов инвестиций и загружая NFT-зированную версию White Paper, в качестве доказательства авторства.
@@ -289,7 +291,7 @@
 Доли по кошелькам «Инвестор» будут разбиваться в соответствии с долей вклада в общий объём инвестиций в приложение между всеми инвесторами.
 При необходимости, создатели приложений смогут привлекать к консультированию по развитию приложения, менеджеров развития экосистемы DES, выделяя им из своих долей процент от общих объёмов транзакций по продукту. Подробнее о менеджерах развития экосистемы DES, читай в разделе «Учёт активности в проекте DES».
 
-Управление проектом
+#### Управление проектом
 Консенсус сети:
 Кирилл Знобищев 🦈, [08.10.2022 20:59]
 В основной части консенсус будет работать на движке thendermint bft. 
@@ -298,14 +300,15 @@
 В нашем видоизмененном DPoS, делегатор не будет выбирать валидатора, а будет делегировать свои средства в общий Пул делигаторов - (П1) сумма которого будет считаться за 100%, для того что бы силу голоса этого пула в дальнейшем распределить в процентном соотношении по валидаторам, исходя из их Аптайма (количества блоков подписанных подряд без пропусков, штрафов и злонамеренных действий). за период в 10 000 блоков. Каждый такой период эта статистика должна обновляться и обновлять статус Валидаторов по рангу, присваивая им силу голоса пула (П1) соответственную набранным по Аптайму процентам за прошедший период. 
 Весь активный сет Валидаторов для этого предполагается ранжировать по этому признаку и присваивать каждому из них долю полезной активности в процентах взяв за 100% аптайм всего активного сета Валидаторов за период в 10 000 блоков. 
 Также в этой системе, в отличие от стандартного DPoS, будет исключена борьба за низкие комиссии. Таким образом всем валидаторам будут уплачиваться одинаковые комиссионные. 
-Система заработка делигаторов тоже будет модернизированная. 
+
+##### Система заработка делигаторов тоже будет модернизированная. 
 
 Все полученные за подписание блоков в течение периода в 10 000 блоков комиссии с транзакций будут также помещаться в отдельный Пул (П2), который будет разделён 50/50 - валидаторы/делегаторы.
  Заработок Валидаторов будет распределён им непосредственно за количество подписанных блоков таким образом: за 100% будет взято 10 000 блоков и распределено в процентном соотношении валидаторам 0,01% за каждый подписанный блок. 
  Делегаторы разделят свои 50% (П2) исходя из вложенных(заделигированных) ими в (П1) средств. Взяв общий объём пула  (П1)за 100% мы сможем выяснить долю каждого делигатора в процетном соотношении. Исходя из выясненной доли, каждый делегатор будет получать соответствующее его доле вознаграждение из 50% (П2). 
  При этом система должна вносить поправки в реальном времени, потому как за период в 10 000 блоков Пул делигаторов (П1) может быть множество раз пополнен, как новыми делегаторами - так и уже участвующими. Корректировки для корректного просчёта вознаграждений, должны быть своевременными. 
  
-Условия для получения статуса Валидатора:
+##### Условия для получения статуса Валидатора:
 Что бы стать валидатором сети, участник сети должен внести депозит в основной монете блокчейна и депозит в любом доступном для создания на нашей платформе Стейблкоине. При этом сумма заблокированных стейблкоинов должна быть не менее 50% от стоимости заблокированных им монет блокчейна. При росте стоимости монеты блокчейна, валидатор должен самостоятельно контролировать баланс - токен/стейблкоин и добавлять стоимость в стейблкоин. 
 Максимальное количество валидаторов на старте проекта будет равна не более 150.
 В процессе развития проекта их максимальное колличество может  возрастать. 
@@ -321,7 +324,7 @@
 Претендент на валидацию не обязан быть участником DAO. 
 Неликвидные токены голоса не могут быть переданы по собственному желанию, дабы избежать спекуляции ими. При выявлении спекуляций токенами голоса, активист проекта, замеченный в этом, может потерять часть или даже все токены голоса и может быть исключён из сета Валидаторов навсегда посредством голосования.
 
-Добыча монет за создание пользы в проекте:
+#### Добыча монет за создание пользы в проекте:
 Для реализации процесса добычи монет DES за привнесение пользы проекту, создаётся раздел сайта с названием «Биржа задач». Все действия в данном разделе подлежат конспектированию и перенесению в блокчейн, для последующего начисления баллов активности.
 Данный раздел сайта представляется собой форум для внесения предложений и инструменты для проведения голосований по предложениям сообщества в этом форуме.
 Все предложения сообщества, поддержанные лайками не менее чем 10% силы голоса активистов проекта, переносятся в рейтинг биржи задач.
@@ -335,7 +338,7 @@
 Помимо причитающейся оплаты, исполнители также получают matching bonus (программист, маркетолог, полиглот, копирайтер, блоггер, визуализатор и т.д.). 
 В последствии, каждый активный участник может стать полноправным членом управляющего совета проекта.
 
-Учёт активности в проекте DES
+#### Учёт активности в проекте DES
 1 Проект управляется Активными Участниками Сообщества (далее - Актив), которые в первую очередь более заинтересованы в социальной, функционоальной и децентрализованной составляющей сети, нежели в её экономической составляющей.
 
 2 На первом этапе функционирования проекта вводится система (см. Табл. 1) на основе которой к управлению проектом привлекаются самые активные участники сообщества, привносящие наибольший вклад в развитие полезности.
@@ -373,7 +376,7 @@
 
 19 Участник, проявляющий себя не активно (не соответственно критериям активности участников DAO) более 5 раз подряд теряют возможность получить токены управления проекта. При продолжении отсутствия инициативы, данный участник исключается из состава Актива проекта и переносится в канал наблюдающих за развитием проекта.
 
-DES Арена
+#### DES Арена
 Для поощрения активности участников эко-системы проекта DES, будет реализован модуль DES Арена. На Арене, желающие смогут принимать участие в различных соревнованиях и выигрывать монеты DES (либо стейбл-коины DESS) или вознаграждения от партнёров проекта, инициирующих активность.
 Лучший логотип компании или какого-нибудь продукта... лучший дизайн сайта... новый код и дополнения в работе системы и многое другое - всё, где есть более 10 участников, может стать соревнованием, в котором будут победители и проигравшие🤜💥🤛
 Принцип работы:
